.config/kubernetes/production/healthtracker-ingres-ssl.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: healthtracker
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    certmanager.k8s.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
    - hosts:
        - mtagab.me
        - www.mtagab.me
      secretName: mtagab.me
  backend:
    serviceName: website
    servicePort: 8080
  rules:
    - host: mtagab.me
      http:
        paths:
          - path: /account
            backend:
              serviceName: account
              servicePort: 8080
          - path: /government
            backend:
              serviceName: government
              servicePort: 8080
          - path: /infection
            backend:
              serviceName: infection
              servicePort: 8080
          - path: /notification
            backend:
              serviceName: notification
              servicePort: 8080
          - path: /security
            backend:
              serviceName: security
              servicePort: 8080
          - path: /hospital
            backend:
              serviceName: hospital
              servicePort: 8080
          - path: /user
            backend:
              serviceName: user
              servicePort: 8080
    - host: www.mtagab.me
        http:
        paths:
          - path: /account
            backend:
              serviceName: account
              servicePort: 8080
          - path: /government
            backend:
              serviceName: government
              servicePort: 8080
          - path: /infection
            backend:
              serviceName: infection
              servicePort: 8080
          - path: /notification
            backend:
              serviceName: notification
              servicePort: 8080
          - path: /security
            backend:
              serviceName: security
              servicePort: 8080
          - path: /hospital
            backend:
              serviceName: hospital
              servicePort: 8080
          - path: /user
            backend:
              serviceName: user
              servicePort: 8080
